Added Socket.io for new Users

--- a/client/main.pug
+++ b/client/main.pug
@@ -1,3 +1,10 @@
-link(rel='stylesheet', href='client/styles/main.css')
-
+//Main.css
+link(rel='stylesheet', href='./styles/main.css')
+//Socket.io
+script(src='./client/scripts/socket.io.min.js')
+//Jquery
+script(src='./client/scripts/jquery-3.3.1.min.js')
+//Main.js
+script(src='./client/scripts/main.js')
+//Map
 include components/map
