--- a/client/components/map.pug
+++ b/client/components/map.pug
@@ -1,11 +1,14 @@
+//Leaflet CSS
 link(rel='stylesheet', href='https://unpkg.com/leaflet@1.3.4/dist/leaflet.css', integrity='sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA==', crossorigin='')
-// Make sure you put this AFTER Leaflet's CSS
+//Leafet JS
 script(src='https://unpkg.com/leaflet@1.3.4/dist/leaflet.js', integrity='sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA==', crossorigin='')
-script(src='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.js')
+//MapBox CSS
 link(href='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.css', rel='stylesheet')
-
-//Map.CSS
+//MapBox JS
+script(src='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.js')
+//Map.css
 link(rel='stylesheet', href='client/styles/map.css')
-#map
-  
+//Map.js
 script(src='client/scripts/map.js')
+//Map Element
+#map
