--- a/client/main.pug
+++ b/client/main.pug
@@ -1,10 +1,21 @@
-//Main.css
-link(rel='stylesheet', href='./styles/main.css')
 //Socket.io
 script(src='./client/scripts/socket.io.min.js')
 //Jquery
 script(src='./client/scripts/jquery-3.3.1.min.js')
+//Phaser
+script(src='//cdn.jsdelivr.net/npm/phaser@3.13.0/dist/phaser.min.js')
+//FlexBox
+link(href='https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css', rel='stylesheet')
+//Main.css
+link(rel='stylesheet', href='./styles/main.css')
 //Main.js
 script(src='./client/scripts/main.js')
+  
 //Map
 include components/map
+
+//HUD
+include components/HUD
+
+//Game 
+include components/game
