--- a/client/styles/map.css
+++ b/client/styles/map.css
@@ -1,4 +1,7 @@
 #map {
   width : 100%;
   height : 100%;
+  position: absolute;
+  z-index: 3;
+  background-image: url("/client/assets/purpleGrid.svg");
 }
