--- a/client/styles/HUD.css
+++ b/client/styles/HUD.css
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  align-items: center;
+  align-items: flex-start;
   pointer-events: none;
 }
 
