--- a/client/styles/images.css
+++ b/client/styles/images.css
@@ -1,30 +1,71 @@
-#uploadImageForm{
+#imagesContainerHUD{
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   background: #5d8c73;
   border : 10px solid #536354;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
-  height : 50%;
+  border-bottom: 0px;
+  height : 100%;
   width : 25%;
   pointer-events: auto;
   margin: 0px;
 }
 
+#imagesContainer{
+  width : 90%;
+  height : 90%;
+  margin: 5px 0px;
+  padding: 5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.image{
+  width : 50px;
+  height: 50px;
+  background-color : white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.image:hover{
+  cursor : pointer;
+  background-color: #fbffd3;
+}
+
+.imageSrc{
+  width : 90%;
+  height: 90%;
+  padding: 5px;
+}
+
+
+#uploadImageForm{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width : 100%;
+}
+
 #uploadImageButton{
   text-align: center;
-  width : 50%;
-  height : 33%;
+  width : 90%;
+  height : 5%;
   padding: 5px;
-  margin-bottom: 10px;
   font-family: Futura,Trebuchet MS,Arial,sans-serif;
   font-size: 20px;
   color: white;
   font-weight: bold;
   background-color: #a7bca9;
   border-radius: 10px;
+  margin-bottom: -5px;
   display: flex;
   justify-content: center;
   align-items: center;
