--- a/client/main.pug
+++ b/client/main.pug
@@ -11,11 +11,11 @@ link(rel='stylesheet', href='./styles/main.css')
 //Main.js
 script(src='./client/scripts/main.js')
   
-//Map
-include components/map
-
-//Game 
-include components/game
+//Environment
+include components/environment
+  
+//Background
+include components/background
 
 //HUD
 include components/HUD
