--- a/client/components/background.pug
+++ b/client/components/background.pug
@@ -6,8 +6,9 @@
 //- link(href='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.css', rel='stylesheet')
 //- //MapBox JS
 //- script(src='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.js')
-//Map.css
-link(rel='stylesheet', href='client/styles/map.css')
-//Map.js
-script(src='client/scripts/map.js')
-#map
+//background.css
+link(rel='stylesheet', href='client/styles/background.css')
+//background.js
+script(src='client/scripts/background.js')
+
+#background
