--- a/client/styles/HUD.css
+++ b/client/styles/HUD.css
@@ -3,18 +3,57 @@
   height : 100%;
   position : absolute;
   z-index: 5;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: flex-start;
   pointer-events: none;
 }
 
-#HUDFooter{
+#menuContainer{
+  height : 100%;
   width : 100%;
-  height : 25%;
-  /*border : 2px solid yellow;*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+}
+
+#menu{
+  width : 50%;
+  height : 75%;
+  background: #5d8c73;
+  border : 10px solid #536354;
+  border-radius: 10px;
+  pointer-events: all;
+  display: none;
+}
+
+#scrollZones{
+  width : 100%;
+  height : 100%;
+}
+
+#horizontalScrollZones{
+  width: 100%;
+  height : 100%;
   display: flex;
   flex-direction: row;
-  align-items: flex-end;
+  justify-content: space-between;
+}
+
+#leftScrollZone{
+  /*border : 2px solid yellow;*/
+  width : 5%;
+  height : 100%;
+  pointer-events: all;
+  cursor: none;
+}
+
+#rightScrollZone{
+  /*border : 2px solid yellow;*/
+  width : 5%;
+  height : 100%;
+  pointer-events: all;
+  cursor: none;
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: center;
+  align-items: center;
 }
