--- a/client/styles/background.css
+++ b/client/styles/background.css
@@ -1,7 +1,8 @@
-#map {
+#background {
   width : 100%;
   height : 100%;
   position: absolute;
   z-index: 3;
   background-image: url("/client/assets/purpleGrid.svg");
+  display: flex
 }
