--- a/client/styles/images.css
+++ b/client/styles/images.css
@@ -3,21 +3,17 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  background: #5d8c73;
-  border : 10px solid #536354;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  border-bottom: 0px;
-  height : 100%;
-  width : 25%;
+  width : 60%;
+  height: 100%;
   pointer-events: auto;
   margin: 0px;
+  background-color: #5d7769;
 }
 
 #imagesContainer{
-  width : 90%;
+  width : 100%;
   height : 90%;
-  margin: 5px 0px;
+  margin: 5px 0px 0px 10px;
   padding: 5px;
   display: flex;
   flex-direction: row;
@@ -30,9 +26,11 @@
   height: 50px;
   background-color : white;
   display: flex;
+  padding: 5px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: 3px;
 }
 
 .image:hover{
@@ -41,11 +39,9 @@
 }
 
 .imageSrc{
-  width : 90%;
-  height: 90%;
-  padding: 5px;
+  width : 30px;
+  height: 30px;
 }
-
 
 #uploadImageForm{
   display: flex;
@@ -70,12 +66,14 @@
   justify-content: center;
   align-items: center;
 }
+
 #uploadImageButton:hover{
   background-color: #f2109f;
   cursor : pointer;
   -webkit-transition: background-color 0.5s; /* Safari */
   transition: background-color 0.5s;
 }
+
 #uploadImageLabel{
   cursor: pointer;
 }
