--- a/client/components/HUD.pug
+++ b/client/components/HUD.pug
@@ -8,3 +8,6 @@ script(src='./scripts/HUD.js')
     #horizontalScrollZones
       #leftScrollZone.scrollZone(direction='left')
       #rightScrollZone.scrollZone(direction='right')
+    #verticalScrollZones
+      #upScrollZone.scrollZone(direction='up')
+      #downScrollZone.scrollZone(direction='down')
