--- a/client/components/environment.pug
+++ b/client/components/environment.pug
@@ -9,6 +9,8 @@ script(src='client/scripts/environment.js')
       img#thisUserAvatar(src='https://storage.googleapis.com/valoria/doggy.gif')
       img#thisUserScrollRight.thisUserScrollImg(src='https://storage.googleapis.com/valoria/rocket.gif')
       img#thisUserScrollLeft.thisUserScrollImg(src='https://storage.googleapis.com/valoria/rocket.gif')
+      img#thisUserScrollUp.thisUserScrollImg(src='https://storage.googleapis.com/valoria/rocket.gif')
+      img#thisUserScrollDown.thisUserScrollImg(src='https://storage.googleapis.com/valoria/rocket.gif')
 
   .memes
     //- img.myMeme.meme(draggable='false' src='https://storage.googleapis.com/valoria/heart.png')
