--- a/client/styles/HUD.css
+++ b/client/styles/HUD.css
@@ -31,6 +31,7 @@
 }
 
 #horizontalScrollZones{
+  position: absolute;
   width: 100%;
   height : 100%;
   display: flex;
@@ -52,8 +53,29 @@
   height : 100%;
   pointer-events: all;
   cursor: none;
+}
+
+#verticalScrollZones{
+  width: 100%;
+  height : 100%;
   display: flex;
-  flex-direction: column-reverse;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
+  position: absolute;
+}
+
+#upScrollZone{
+  /*border : 2px solid yellow;*/
+  width : 100%;
+  height : 5%;
+  pointer-events: all;
+  cursor: none;
+}
+
+#downScrollZone{
+  /*border : 2px solid yellow;*/
+  width : 100%;
+  height : 5%;
+  pointer-events: all;
+  cursor: none;
 }
