--- a/client/components/images.pug
+++ b/client/components/images.pug
@@ -7,9 +7,9 @@ script(src='client/scripts/images.js')
   
   #imagesContainer
     .image
-      img.imageSrc(src='https://storage.googleapis.com/valoria/heart.png')
+      img.imageSrc(src='https://storage.googleapis.com/valoria-dev/heart.png')
     .image
-      img.imageSrc(src='https://storage.googleapis.com/valoria/doggy.gif')
+      img.imageSrc(src='https://storage.googleapis.com/valoria-dev/doggy.gif')
   
   form#uploadImageForm(action="/upload" method="post" enctype="multipart/form-data")
     #uploadImageButton
