--- a/client/styles/background.css
+++ b/client/styles/background.css
@@ -1,8 +1,11 @@
 #background {
-  width : 100%;
-  height : 100%;
+  transform: translateZ(0);
+  width : 100000px;
+  height : 100000px;
   position: absolute;
   z-index: 3;
-  background-image: url("/client/assets/purpleGrid.svg");
-  display: flex
+  background-image: url("https://media1.giphy.com/media/SfjPc9NCiJp3G/giphy.gif?cid=3640f6095bc565e87465544f55536731");
+  display: flex;
+  left : -50000;
+  top : -50000;
 }
