--- a/client/styles/HUD.css
+++ b/client/styles/HUD.css
@@ -39,20 +39,68 @@
   justify-content: space-between;
 }
 
-#leftScrollZone{
-  /*border : 2px solid yellow;*/
+#leftZones{
   width : 5%;
   height : 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+#leftUpScrollZone{
+  width : 100%;
+  height : 25%;
   pointer-events: all;
   cursor: none;
+  /*border : 2px solid blue;*/
+}
+
+#leftScrollZone{
+  width : 100%;
+  height : 50%;
+  pointer-events: all;
+  cursor: none;
+  /*border : 2px solid yellow;*/
+}
+
+#leftDownScrollZone{
+  width : 100%;
+  height : 25%;
+  pointer-events: all;
+  cursor: none;
+  /*border : 2px solid blue;*/
+}
+
+#rightZones{
+  width : 5%;
+  height : 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+#rightUpScrollZone{
+  width : 100%;
+  height : 25%;
+  pointer-events: all;
+  cursor: none;
+  /*border : 2px solid blue;*/
 }
 
 #rightScrollZone{
   /*border : 2px solid yellow;*/
-  width : 5%;
-  height : 100%;
+  width : 100%;
+  height : 50%;
   pointer-events: all;
   cursor: none;
+}
+
+#rightDownScrollZone{
+  width : 100%;
+  height : 25%;
+  pointer-events: all;
+  cursor: none;
+  /*border : 2px solid blue;*/
 }
 
 #verticalScrollZones{
@@ -61,21 +109,64 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
   position: absolute;
+}
+
+#upZones{
+  width : 100%;
+  height : 5%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  pointer-events: all;
+}
+
+#upLeftScrollZone{
+  width : 25%;
+  height : 100%;
+  /*border : 2px solid blue;*/
 }
 
 #upScrollZone{
   /*border : 2px solid yellow;*/
-  width : 100%;
-  height : 5%;
+  width : 50%;
+  height : 100%;
   pointer-events: all;
   cursor: none;
 }
 
-#downScrollZone{
-  /*border : 2px solid yellow;*/
+#upRightScrollZone{
+  width : 25%;
+  height : 100%;
+  /*border : 2px solid blue;*/
+}
+
+#downZones{
   width : 100%;
   height : 5%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  pointer-events: all;
+}
+
+#downScrollZone{
+  /*border : 2px solid yellow;*/
+  width : 50%;
+  height : 100%;
   pointer-events: all;
   cursor: none;
+}
+
+#downLeftScrollZone{
+  width : 25%;
+  height : 100%;
+  /*border : 2px solid blue;*/
+}
+
+#downRightScrollZone{
+  width : 25%;
+  height : 100%;
+  /*border : 2px solid blue;*/
 }
