Valoria Stable Release Version 1

--- a/client/components/HUD.pug
+++ b/client/components/HUD.pug
@@ -3,7 +3,11 @@ script(src='./scripts/HUD.js')
 #HUD
   #menuContainer
     #menu
-      include images
+      include avatarSelect
+      include objectSelect
+      include menuSelect
+      include backgroundSelect
+      //- include images
   #scrollZones
     #horizontalScrollZones
       #leftZones
