--- a/client/components/environment.pug
+++ b/client/components/environment.pug
@@ -6,8 +6,7 @@ script(src='client/scripts/environment.js')
 #environment
   .users
     #thisUser
-      img#thisUserAvatar(src='https://storage.googleapis.com/valoria/main/doggy.gif')
-      img#thisUserScroll(src='https://storage.googleapis.com/valoria/rocket.gif')
-  .memes
-    //- img.myMeme.meme(draggable='false' src='https://storage.googleapis.com/valoria/heart.png')
+      img#thisUserAvatar
+      //- img#thisUserScroll
+  .objects
   
