--- a/client/main.pug
+++ b/client/main.pug
@@ -6,6 +6,10 @@ script(src='./client/scripts/jquery-3.3.1.min.js')
 script(src='//cdn.jsdelivr.net/npm/phaser@3.13.0/dist/phaser.min.js')
 //FlexBox
 link(href='https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css', rel='stylesheet')
+//Axios 
+script(src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js")
+//Marquee 
+script(src='https://cdn.jsdelivr.net/npm/jquery.marquee@1.5.0/jquery.marquee.min.js')
 //Main.css
 link(rel='stylesheet', href='./styles/main.css')
 //Main.js
