--- a/client/styles/HUD.css
+++ b/client/styles/HUD.css
@@ -16,13 +16,16 @@
 }
 
 #menu{
-  width : 50%;
-  height : 75%;
+  width : 80%;
+  height : 80%;
   background: #5d8c73;
-  border : 10px solid #536354;
-  border-radius: 10px;
+  box-shadow: 0px 0px 10px 10px #62ed89;
+  border-radius : 25px;
   pointer-events: all;
-  display: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around
 }
 
 #scrollZones{
