Added New Dimension Form

--- a/client/components/HUD.pug
+++ b/client/components/HUD.pug
@@ -8,6 +8,7 @@ script(src='./scripts/HUD.js')
         include objectSelect
         include menuSelect
         include backgroundSelect
+        include newDimension
       else
         include auth
       //- include images
