--- a/client/components/menuSelect.pug
+++ b/client/components/menuSelect.pug
@@ -2,15 +2,25 @@ link(href='styles/menuSelect.css' rel='stylesheet')
 script(src='scripts/menuSelect.js')
 
 .menuSelectContainer
-  #avatarScreenSelect.menuSelection
-    img.menuSelectionImg
-    .menuSelectionLabelContainer
-      .menuSelectionLabel Change Avatar
-  #objectScreenSelect.menuSelection
-    img.menuSelectionImg
-    .menuSelectionLabelContainer
-      .menuSelectionLabel Change Object
-  #backgroundScreenSelect.menuSelection
-    img.menuSelectionImg
-    .menuSelectionLabelContainer
-      .menuSelectionLabel Change Background
+  .menuOptions
+    #avatarScreenSelect.menuSelection
+      .menuSelectionImgContainer
+        img.menuSelectionImg
+      .menuSelectionLabelContainer
+        .menuSelectionLabel Change Avatar
+    #objectScreenSelect.menuSelection
+      .menuSelectionImgContainer
+        img.menuSelectionImg
+      .menuSelectionLabelContainer
+        .menuSelectionLabel Change Object
+    #backgroundScreenSelect.menuSelection
+      .menuSelectionImgContainer
+        img.menuSelectionImg
+      .menuSelectionLabelContainer
+        .menuSelectionLabel Change Background
+    #newDimensionScreenSelect.menuSelection
+      .menuSelectionImgContainer
+        img.menuSelectionImg
+      .menuSelectionLabelContainer
+        .menuSelectionLabel Create New Dimension
+  .logoutBtn Log Out
