--- a/client/styles/menuSelect.css
+++ b/client/styles/menuSelect.css
@@ -2,14 +2,23 @@
   width : 100%;
   height : 100%;
   display: none;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: space-around;
 }
 
+.menuOptions{
+  width : 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap : wrap;
+  justify-content: space-around;
+  align-items: center;
+}
+
 .menuSelection{
-  width : 30%;
-  height : 50%;
+  width : 15%;
+  height : 30%;
   /*border : 2px solid yellow;*/
   display: flex;
   flex-direction: column;
@@ -21,16 +30,24 @@
   background-color: #557062;
 }
 
-.menuSelectionImg{
+.menuSelectionImgContainer{
   width : 100%;
   height : 80%;
   background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.menuSelectionImg{
+  max-width: 90%;
+  max-height: 90%;
 }
 
 .menuSelectionLabelContainer{
   width : 100%;
   height : 20%;
-  font-size: 25px;
+  font-size: 15px;
   font-weight: bold;
   font-family: futura;
   color : white;
@@ -39,4 +56,25 @@
   justify-content: center;
   align-items: center;
   border-top: 2px solid white;
+  padding-top : 5px;
+  padding-bottom: 5px;
+}
+
+.menuSelectionLabel{
+  text-align: center;
+}
+
+.logoutBtn{
+  font-size: 20px;
+  color: white;
+  font-family: futura;
+  font-weight: bold;
+  border : 3px solid white;
+  border-radius: 10px;
+  padding : 10px 5px;
+  cursor: pointer;
+}
+
+.logoutBtn:hover{
+  background-color: #557062;
 }
