Dimensions now have rules

--- a/client/components/HUD.pug
+++ b/client/components/HUD.pug
@@ -1,5 +1,5 @@
-link(rel='stylesheet', href='./styles/HUD.css')
-script(src='./scripts/HUD.js')
+link(rel='stylesheet', href='/styles/HUD.css')
+script(src='/client/scripts/HUD.js')
 #HUD
   #menuContainer
     #menu
