--- a/client/components/auth.pug
+++ b/client/components/auth.pug
@@ -1,6 +1,6 @@
-link(href='./styles/auth.css' rel='stylesheet' )
+link(href='/styles/auth.css' rel='stylesheet' )
   
-script(src='./scripts/auth.js')
+script(src='/scripts/auth.js')
 
 .authContainer
   .authLabel Valoria
