--- a/client/components/backgroundSelect.pug
+++ b/client/components/backgroundSelect.pug
@@ -1,8 +1,8 @@
 script(src='//cdn.jsdelivr.net/npm/jquery.marquee@1.5.0/jquery.marquee.min.js', type='text/javascript')
 
-link(href='./styles/backgroundSelect.css' rel='stylesheet' )
+link(href='/styles/backgroundSelect.css' rel='stylesheet' )
   
-script(src='./scripts/backgroundSelect.js')
+script(src='/scripts/backgroundSelect.js')
 
 .backgroundContainer
   .selectYourBackground
