--- a/client/components/images.pug
+++ b/client/components/images.pug
@@ -1,7 +1,7 @@
 //images.css 
-link(href='client/styles/images.css' rel='stylesheet')
+link(href='/client/styles/images.css' rel='stylesheet')
 //images.js
-script(src='client/scripts/images.js')
+script(src='/client/scripts/images.js')
   
 #imagesContainerHUD
   
