--- a/client/components/avatarSelect.pug
+++ b/client/components/avatarSelect.pug
@@ -1,28 +1,48 @@
-link(href='./styles/avatar.css' rel='stylesheet' )
+link(href='/styles/avatar.css' rel='stylesheet' )
   
-script(src='./scripts/avatar.js')
+script(src='/scripts/avatar.js')
 
 .avatarContainer
   .selectYourAvatar
-    .avatarPreview
-      img.avatarPreviewSrc
-    .avatarPreviewKey
+    if dimension.ownerChooseAvatars
+      .avatarPreview
+        img.avatarPreviewSrc(src=dimension.avatars[0].src)
+      .avatarPreviewKey=dimension.avatars[0].key
+    else
+      .avatarPreview
+        img.avatarPreviewSrc(src=currentUser.avatars[0].src)
+      .avatarPreviewKey=currentUser.avatars[0].key
     .avatarBtns
       .selectYourAvatarBtn Select Avatar
-      //- form.uploadAvatar(action="/upload" method="post" enctype="multipart/form-data")
-      //-   .uploadAvatarBtn
-      //-     label.uploadAvatarLabel Upload Avatar
-      //-       input.uploadAvatarInput(hidden type='file' name='upload' onChange="uploadAvatar()")
-    .uploadAvatar
-      input.uploadAvatarInput(placeholder='Link to Image you are Uploading')
-      input.uploadAvatarKey(placeholder='Name for your Image')
-      .uploadAvatarBtn(onClick = "uploadAvatar()") Upload
+    if dimension.ownerChooseAvatars
+      if currentUser.id == dimension.owner
+        .uploadAvatar
+          input.uploadAvatarInput(placeholder='Link to Image you are Uploading')
+          input.uploadAvatarKey(placeholder='Name for your Image')
+          .uploadAvatarBtn(onClick = "uploadAvatarToDimension()") Upload
+    else
+      .uploadAvatar
+        input.uploadAvatarInput(placeholder='Link to Image you are Uploading')
+        input.uploadAvatarKey(placeholder='Name for your Image')
+        .uploadAvatarBtn(onClick = "uploadAvatarToUser()") Upload
     .availableAvatars
-      //- .avatarSelected
-      //-   img.avatarSrc(src='https://storage.googleapis.com/valoria/main/doggy.gif')
-      //-   .avatarKeyContainer 
-      //-     .avatarKeyMarquee Doggy Corgi Pup
-      //- .avatarSelection
-      //-   img.avatarSrc(src='https://storage.googleapis.com/valoria/main/catfish.gif')
-      //-   .avatarKeyContainer 
-      //-     .avatarKey Catfish
+      if dimension.ownerChooseAvatars
+        each avatar, i in dimension.avatars
+          if i==0
+            .avatarSelected
+              img.avatarSrc(src=avatar.src)
+              p(hidden).avatarKey=avatar.key
+          else
+            .avatarSelection
+              img.avatarSrc(src=avatar.src)
+              p(hidden).avatarKey=avatar.key
+      else
+        each avatar, i in currentUser.avatars
+          if i==0
+            .avatarSelected
+              img.avatarSrc(src=avatar.src)
+              p(hidden).avatarKey=avatar.key
+          else
+            .avatarSelection
+              img.avatarSrc(src=avatar.src)
+              p(hidden).avatarKey=avatar.key
