--- a/client/components/newDimension.pug
+++ b/client/components/newDimension.pug
@@ -1,6 +1,6 @@
-link(href='styles/newDimension.css' rel='stylesheet')
-  
+link(href='/styles/newDimension.css' rel='stylesheet')
 
+script(src='/scripts/newDimension.js')  
 
 .newDimensionContainer
   .newDimensionInputForm
@@ -10,26 +10,26 @@ link(href='styles/newDimension.css' rel='stylesheet')
     .radioTitle Dimension Avatars
     form.radioBtns
       .radioBtn
-        input(type='radio' name='dimensionAvatar' value="owner-set")
+        input(type='radio' name='ownerChooseAvatars' value="true")
         .radioLabel Set by Dimension Owner 
       .radioBtn
-        input(type='radio' name='dimensionAvatar' value="user-chosen")
+        input(type='radio' name='ownerChooseAvatars' value="false")
         .radioLabel Set by User
     .radioTitle Dimension Objects
     form.radioBtns
       .radioBtn
-        input(type='radio' name='dimensionObject' value="owner-set") 
+        input(type='radio' name='ownerChooseObjects' value="true") 
         .radioLabel Set by Dimension Owner
       .radioBtn
-        input(type='radio' name='dimensionAvatarObject' value="user-chosen") 
+        input(type='radio' name='ownerChooseObjects' value="false") 
         .radioLabel Set by User
     .radioTitle Who Can Change the Background?
     form.radioBtns 
       .radioBtn
-        input(type='radio' name='backgroundChange' value="owner")
+        input(type='radio' name='ownerChooseBackground' value="true")
         .radioLabel Only Dimension Owner
       .radioBtn
-        input(type='radio' name='backgroundChange' value="anybody")
+        input(type='radio' name='ownerChooseBackground' value="false")
         .radioLabel Anybody
   .newDimensionSubmitBtn Create and Go to Dimension
     
