Added Livechat to Valoria.us

--- a/client/components/environment.pug
+++ b/client/components/environment.pug
@@ -4,9 +4,9 @@ link(rel='stylesheet', href='/client/styles/environment.css')
 script(src='/client/scripts/environment.js')
   
 #environment
+  .things
   .users
     #thisUser
       img#thisUserAvatar
-      //- img#thisUserScroll
   .objects
   
