--- a/client/components/menuSelect.pug
+++ b/client/components/menuSelect.pug
@@ -13,6 +13,11 @@ script(src='/client/scripts/menuSelect.js')
         img.menuSelectionImg
       .menuSelectionLabelContainer
         .menuSelectionLabel Change Object
+    #thingScreenSelect.menuSelection
+      .menuSelectionImgContainer
+        img.menuSelectionImg
+      .menuSelectionLabelContainer
+        .menuSelectionLabel Spawn Livechat Box
     if dimension.ownerChooseBackground
       if currentUser.id == dimension.owner
         #backgroundScreenSelect.menuSelection
