--- a/client/components/things/livechat.pug
+++ b/client/components/things/livechat.pug
@@ -1,5 +1,5 @@
-link(rel='stylesheet' href='styles/livechat.css')
-script(src='scripts/livechat.js')
+link(rel='stylesheet' href='/client/styles/livechat.css')
+script(src='/client/scripts/livechat.js')
 .livechat.thing.prototype
   .livechatHeader Live Chat
   .livechatMessageContainer
