--- a/client/main.pug
+++ b/client/main.pug
@@ -23,6 +23,9 @@ if(currentUser)
 //DIMENSION INFO 
 p#dimensionName(hidden)=dimension.name
 p#dimensionBackgroundSrc(hidden)=dimension.background.src
+
+//RENDER INFO
+#dimensionRender(hidden)=dimensionRender
   
 //Environment
 include components/environment
