Removed dimensional doors in live version

--- a/client/components/environment.pug
+++ b/client/components/environment.pug
@@ -10,7 +10,7 @@ script(src='/client/scripts/environment.js')
       img#thisUserAvatar
   .objects
   .dimensionalDoors
-    if(dimension.name == 'main')
-      iframe.dimensionalDoor(src='http://localhost:3000/dimension/fruit/door' id="fruit")
-    else
-      iframe.dimensionalDoor(src='http://localhost:3000/dimension/main/door' id="main")
+    //- if(dimension.name == 'main')
+    //-   iframe.dimensionalDoor(src='http://localhost:3000/dimension/fruit/door' id="fruit")
+    //- else
+    //-   iframe.dimensionalDoor(src='http://localhost:3000/dimension/main/door' id="main")
