Things are updated realtime and persist

--- a/client/components/HUD/menu/menuSelect.pug
+++ b/client/components/HUD/menu/menuSelect.pug
@@ -17,7 +17,7 @@ script(src='/components/HUD/menu/menuSelect.js')
       .menuSelectionImgContainer
         img.menuSelectionImg
       .menuSelectionLabelContainer
-        .menuSelectionLabel Spawn Livechat Box
+        .menuSelectionLabel Spawn a Thing
     if dimension.ownerChooseBackground
       if currentUser.id == dimension.owner
         #backgroundScreenSelect.menuSelection
