Livechat added to things

--- a/client/components/HUD/HUD.pug
+++ b/client/components/HUD/HUD.pug
@@ -9,6 +9,7 @@ script(src='/components/HUD/HUD.js')
         include menu/menuSelect
         include background/backgroundSelect
         include dimension/newDimension
+        include thing/thingSelect
       else
         //- include landing/landing
         include auth/auth
