Only Owner backgrounds for main

--- a/client/components/HUD/thing/thingSelect.pug
+++ b/client/components/HUD/thing/thingSelect.pug
@@ -13,8 +13,8 @@ script(src='/components/HUD/thing/thingSelect.js')
         img.thingSelectionImg
       .thingSelectionLabelContainer
         .thingSelectionLabel Spawn a Livechat
-    //- #dimensionalDoorThingSelect.thingSelection
-    //-   .thingSelectionImgContainer
-    //-     img.thingSelectionImg
-    //-   .thingSelectionLabelContainer
-    //-     .thingSelectionLabel Spawn a Dimensional Door
+    #dimensionalDoorThingSelect.thingSelection
+      .thingSelectionImgContainer
+        img.thingSelectionImg
+      .thingSelectionLabelContainer
+        .thingSelectionLabel Spawn a Dimensional Door
