--- a/client/components/main.pug
+++ b/client/components/main.pug
@@ -29,7 +29,7 @@ p#dimensionName(hidden)=dimension.name
 p#dimensionBackgroundSrc(hidden)=dimension.background.src
 
 //RENDER INFO
-#dimensionRender(hidden)=dimensionRender
+#doorRender(hidden)=doorRender
   
 //Environment
 include dimension/dimension
