--- a/client/components/dimension/thing/door/door.pug
+++ b/client/components/dimension/thing/door/door.pug
@@ -4,6 +4,7 @@ script(src='/components/dimension/thing/door/door.js')
 .door.prototype.thing
   input.thingColorInput
   .doorLabel(contenteditable="true") Dimensional Door
+  input.doorDimensionName(hidden)
   .doorForm
     input.doorInput(placeholder="Dimension Name" onfocus="toggleUserIsTyping()" onblur="toggleUserIsTyping()")
     .doorInputBtn Open Door to Dimension
