--- a/client/components/dimension/dimension.pug
+++ b/client/components/dimension/dimension.pug
@@ -14,6 +14,7 @@ script(src='/components/dimension/thing/thing.js')
   include thing/door/door
   .things
     .thing.prototype.square
+      .thingText Welcome to Valoria!
       input.thingColorInput
   .users
     #thisUser
