--- a/client/components/dimension/thing/door/door.css
+++ b/client/components/dimension/thing/door/door.css
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  /*justify-content: center;*/
 }
 
 .doorForm{
@@ -42,9 +43,34 @@
   border : 5px solid yellow;
 }
 
+.doorDimensionContainer{
+  width : 90%;
+  height : 90%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  pointer-events: none;
+}
+
 .doorDimension{
-  width: 95%;
+  position: absolute;
+  z-index: 5;
+  display: block;
+  width: 90%;
   height: 90%;
+  border: 0px;
+  pointer-events: all;
+}
+
+.doorText{
+  width: 90%;
+  position: absolute;
+  font-size: 25px;
+  font-weight: bolder;
+  font-family: futura;
+  z-index: 6;
+  pointer-events: none;
+  -webkit-text-stroke: 1px black;
 }
 
 .prototype{
