--- a/client/components/dimension/dimension.pug
+++ b/client/components/dimension/dimension.pug
@@ -4,10 +4,12 @@ link(rel='stylesheet', href='/components/dimension/dimension.css')
 script(src='/components/dimension/dimension.js')
 //user.js
 script(src='/components/dimension/user/user.js')
-//object.js
-script(src='/components/dimension/object/object.js')
-//thing.js
-script(src='/components/dimension/thing/thing.js')
+  
+if !doorRender
+  //object.js
+  script(src='/components/dimension/object/object.js')
+  //thing.js
+  script(src='/components/dimension/thing/thing.js')
 
 .dimension
   if !doorRender
