Added Text images and videos

--- a/client/components/HUD/menu/menuSelect.pug
+++ b/client/components/HUD/menu/menuSelect.pug
@@ -18,6 +18,11 @@ script(src='/components/HUD/menu/menuSelect.js')
         img.menuSelectionImg
       .menuSelectionLabelContainer
         .menuSelectionLabel Spawn a Thing
+    #textScreenSelect.menuSelection
+      .menuSelectionImgContainer
+        img.menuSelectionImg
+      .menuSelectionLabelContainer
+        .menuSelectionLabel Spawn Text
     if dimension.ownerChooseBackground
       if currentUser.id == dimension.owner
         #backgroundScreenSelect.menuSelection
