--- a/client/components/main.pug
+++ b/client/components/main.pug
@@ -5,13 +5,15 @@ script(src='/imports/jquery-3.3.1.min.js')
 //Jquery-UI
 link(rel='stylesheet' href='/imports/jquery-ui.min.css')
 script(src='/imports/jquery-ui.min.js')
-//Phaser
-script(src='//cdn.jsdelivr.net/npm/phaser@3.13.0/dist/phaser.min.js')
 //FlexBox
 link(href='https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css', rel='stylesheet')
 //Spectrum
 link(rel='stylesheet' href='/imports/spectrum.css')
 script(src='/imports/spectrum.js')
+//Quill
+link(href='https://cdn.quilljs.com/1.3.6/quill.snow.css', rel='stylesheet')
+script(src='https://cdn.quilljs.com/1.3.6/quill.js')
+
 //Axios 
 script(src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js")
 //Main.css
