--- a/client/components/dimension/dimension.css
+++ b/client/components/dimension/dimension.css
@@ -70,6 +70,7 @@ img{
   font-family: futura;
   font-weight: bold;
   text-align: center;
+  background-size: cover;
 }
 
 .square{
@@ -77,16 +78,116 @@ img{
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  z-index: 5;
 }
 
-.thingText{
-  font-size: 10px;
-  color: white;
-  font-weight: bold;
+.thingToolbox{
+  display: none;
+  position: absolute;
+  background-color: #ECECEC;
+  flex-direction: column;
+  top : -30px;
+  min-width: 325px;
+  width : 100%;
+  color: black;
+}
+
+.thingTools{
+  width : 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .sp-replacer{
+  width : 33%;
+  border : 2px solid black;
+}
+
+.sp-rep-label{
+  margin-top: -3px;
+  color : black;
+}
+
+.thingMediaBtn{
+  width : 33%;
+  border : 2px solid black;
+  cursor: pointer;
+}
+
+.thingMediaBtn:hover{
+  border : 2px solid yellow;
+}
+
+.thingDeleteBtn{
+  width : 33%;
+  border : 2px solid black;
+  cursor: pointer;
+}
+
+.thingDeleteBtn:hover{
+  border : 2px solid yellow;
+}
+
+.thingMediaContainer{
+  width : 100%;
+  height : 100px;
   display: none;
-  position: absolute;
-  left : -50px;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  cursor : default;
+}
+
+.thingImageForm{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width : 100%;
+  font-size: 14px;
+}
+
+.thingImageInput{
+  width : 50%;
+  padding : 5px;
+}
+
+.thingImageInputBtn{
+  width : 35%;
+  border: 2px solid black;
+  padding : 5px;
+  cursor: pointer;
+}
+.thingImageInputBtn:hover{
+  border : 2px solid yellow;
+}
+
+.thingVideoForm{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width : 100%;
+  font-size: 14px;
+}
+
+.thingVideoInput{
+  width : 50%;
+  padding : 5px;
+}
+
+.thingVideoInputBtn{
+  width : 35%;
+  border : 2px solid black;
+  padding : 5px;
+  cursor: pointer;
+}
+.thingVideoInputBtn:hover{
+  border : 2px solid yellow;
+}
+
+.thingVideo{
+  display: none;
+  width: 90%;
+  height :85%;
+  border: 0px;
 }
