--- a/client/components/HUD/avatar/avatarSelect.pug
+++ b/client/components/HUD/avatar/avatarSelect.pug
@@ -44,5 +44,5 @@ script(src='/components/HUD/avatar/avatar.js')
             .avatarSelection
               img.avatarSrc(src=avatar.src)
               p(hidden).avatarKey=avatar.key
-    .avatarBtns
-      .selectYourAvatarBtn Select Avatar
+    .selectYourAvatarBtn
+      .selectYourAvatarBtnText Select Avatar
