--- a/client/components/HUD/HUD.css
+++ b/client/components/HUD/HUD.css
@@ -16,11 +16,11 @@
 }
 
 #menu{
-  width : 80%;
-  height : 80%;
+  width : 100%;
+  height : 100%;
   background: #5d8c73;
   box-shadow: 0px 0px 10px 10px #62ed89;
-  border-radius : 25px;
+  /*border-radius : 25px;*/
   pointer-events: all;
   display: flex;
   flex-direction: column;
