--- a/client/components/dimension/dimension.css
+++ b/client/components/dimension/dimension.css
@@ -7,15 +7,17 @@ img{
 }
 
 .dimension {
-  width : 100000;
-  height : 100000;
+  width : 100%;
+  height : 100%;
   position : absolute;
   z-index: 4;
   cursor: none;
   transform: translateZ(0);
-  border : 10px solid white;
-  left : -50000;
-  top : -50000;
+  display: none;
+  /*left : -50000;
+  top : -50000;*/
+  background-position: 0px 0px;
+  background-image: url("https://i.imgur.com/a4ycklR.png");
 }
 
 #thisUser{
