Refactored Dimension Space. Made Select Screen Responsive

--- a/client/components/HUD/object/objectSelect.pug
+++ b/client/components/HUD/object/objectSelect.pug
@@ -44,6 +44,5 @@ script(src='/components/HUD/object/object.js')
             .objectSelection
               img.objectSrc(src=object.src)
               p(hidden).objectKey=object.key
-    .objectBtns
-      .selectObjectBtn Select Object
-        .selectObjectBtnText Press *space* to Drop Object
+    .selectYourObjectBtn
+      .selectYourObjectBtnText Select Object
