--- a/client/components/dimension/dimension.css
+++ b/client/components/dimension/dimension.css
@@ -20,6 +20,10 @@ img{
   background-image: url("https://i.imgur.com/a4ycklR.png");
 }
 
+.environment{
+  position: absolute;
+}
+
 #thisUser{
   display: none;
   width : 150px;
