--- a/client/components/dimension/dimension.pug
+++ b/client/components/dimension/dimension.pug
@@ -29,9 +29,10 @@ if !doorRender
             input.thingVideoInput(placeholder="Link to Video")
             .thingVideoInputBtn Embed Video
       iframe.thingVideo
-    .things
-    .users
-    .objects
+    .environment
+      .things
+      .users
+      .objects
   #thisUser
     img#thisUserAvatar
   include thing/door/door
