--- a/client/components/HUD/avatar/avatar.css
+++ b/client/components/HUD/avatar/avatar.css
@@ -72,7 +72,7 @@
   align-items: center;
   width: 300px;
   height: 150px;
-  margin: 10px 0px;
+  margin-bottom: 10px 0px;
 }
 
 .uploadAvatarInput{
@@ -179,7 +179,7 @@
 }
 
 .avatarPreviewKey{
-  margin-top: 10px;
+  margin: 10px 0px;
   color: white;
   font-family: futura;
   text-align: center;
