--- a/client/components/HUD/object/object.css
+++ b/client/components/HUD/object/object.css
@@ -13,13 +13,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: flex-start;
 }
 
 .objectPreview{
   margin-top: 20px;
   background-color: black;
-  width : 250px;
+  width: 300px;
   height : 250px;
   display : flex;
   flex-direction: column;
@@ -32,51 +32,61 @@
   max-height: 90%;
 }
 
-.selectObjectBtn{
-  font-size: 25px;
+.selectYourObjectBtn{
+  font-size: 30px;
   font-family: futura;
   color : white;
   font-weight: bold;
   text-align: center;
-  margin : 20px 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin : 30px 0px;
   background-color: #c81c1c;
   padding: 5px 10px;
-  border-radius: 8px;
+  border-radius: 25px;
   border : 5px solid white;
   cursor: pointer;
+  width : 250px;
+  height: 100px;
 }
 
-.selectObjectBtn:hover{
+.selectYourObjectBtnText{
+
+}
+
+.selectYourObjectBtn:hover{
   border : 5px solid yellow;
 }
 
-.selectObjectBtn:active{
+.selectYourObjectBtn:active{
   border : 5px solid #62ed89;
   background-color: #952c2c;
 }
 
-.selectObjectBtnText{
-  font-size: 15px;
-}
-
 .uploadObject{
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  width: 75%;
+  width: 300px;
+  height: 150px;
+  margin: 10px 0px;
 }
 
 .uploadObjectInput{
   font-size: 15px;
   padding: 10px 5px;
-  width : 50%;
+  width : 300px;
+  height: 40px
 }
 
 .uploadObjectKey{
   font-size: 15px;
   padding: 10px 5px;
-  width : 30%;
+  width : 300px;
+  height: 40px;
 }
 
 .uploadObjectBtn{
@@ -85,12 +95,12 @@
   color : white;
   font-weight: bold;
   text-align: center;
-  margin : 20px 0px;
   background-color: #ac49a2;
   padding: 5px 10px;
   border-radius: 8px;
   border : 5px solid white;
   cursor: pointer;
+  width: 275px;
 }
 
 .uploadObjectBtn:hover{
@@ -106,13 +116,11 @@
   background-color:#557062;
   width : 100%;
   align-self: flex-end;
-  height : 200px;
+  height : 150px;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  border-bottom-right-radius: 25px;
-  border-bottom-left-radius: 25px;
 }
 
 .objectSelection{
@@ -146,8 +154,8 @@
 }
 
 .objectSrc{
-  max-width: 70px;
-  max-height : 45px;
+  max-width: 90%;
+  max-height : 90%;
   margin-bottom: 3px;
 }
 
@@ -171,7 +179,7 @@
 }
 
 .objectPreviewKey{
-  margin-top: 10px;
+  margin: 10px 0px;
   color: white;
   font-family: futura;
   text-align: center;
