--- a/client/components/HUD/avatar/avatar.css
+++ b/client/components/HUD/avatar/avatar.css
@@ -72,7 +72,7 @@
   align-items: center;
   width: 300px;
   height: 150px;
-  margin-bottom: 10px 0px;
+  margin-bottom: 10px;
 }
 
 .uploadAvatarInput{
