--- a/client/components/HUD/avatar/avatar.css
+++ b/client/components/HUD/avatar/avatar.css
@@ -68,7 +68,7 @@
 .uploadAvatar{
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   width: 300px;
   height: 150px;
