Updated Login / Register screen to mobile

--- a/client/components/HUD/auth/auth.pug
+++ b/client/components/HUD/auth/auth.pug
@@ -3,7 +3,8 @@ link(href='/components/HUD/auth/auth.css' rel='stylesheet' )
 script(src='/components/HUD/auth/auth.js')
 
 .authContainer
-  .authLabel Valoria
+  .authLabelContainer
+    .authLabel Valoria
   .authForm
     input.authUsername(placeholder="Username")
     input.authPassword(placeholder="Password" type='password')
