--- a/client/components/HUD/auth/auth.css
+++ b/client/components/HUD/auth/auth.css
@@ -1,55 +1,68 @@
 .authContainer{
   width : 100%;
+  max-width: 500px;
   height : 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
   font-family: futura;
   color : white;
+}
+
+.authLabelContainer{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 15px;
 }
 
 .authLabel{
   color : white;
   text-shadow: 2px 2px 25px #c83bb2;
   font-size: 75px;
-  margin-bottom: 15px;
 }
 
 .authForm{
+  height : 200px;
   display: flex;
   flex-direction: column;
-  width : 50%;
+  justify-content: center;
+  width : 75%;
 }
 
 .authUsername{
   font-size: 20px;
-  padding: 10px 5px;
+  padding: 15px 10px;
   margin-bottom: 10px;
+  border : 5px solid black;
 }
 
 .authPassword{
   font-size: 20px;
-  padding: 10px 5px;
+  padding: 15px 10px;
   margin-bottom: 10px;
+  border : 5px solid black;
 }
 
 .authBtns{
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
   font-size: 25px;
-  width : 50%;
+  width : 70%;
+  margin-bottom: 50px;
 }
 
 .authRegister{
   border : 5px solid white;
   background-color: #c81c1c;
   padding: 10px;
-  margin-right: 5px;
-  width : 45%;
+  width : 100%;
   text-align: center;
+  margin-bottom: 10px;
   cursor: pointer;
 }
 
@@ -61,8 +74,7 @@
   border: 5px solid white;
   background-color: #ac49a2;
   padding: 10px;
-  margin-left: 5px;
-  width : 45%;
+  width : 100%;
   text-align: center;
   cursor: pointer;
 }
